fix spacing between at image and footer

--- a/src/scss/pages/_page404.scss
+++ b/src/scss/pages/_page404.scss
@@ -1,10 +1,6 @@
 .body404page {
     position: relative;
 
-    img {
-        width: 100%;
-    }
-
     &__content {
         width: 589px;
         height: 521px;
